# PyDiffeq

./: LICENSE  README.md  ode_library.py  ode_solver.py  ode_system.py  pyproject.toml  setup.py
methods/: euler_method.py  implicit_euler_method.py  middle_poind_method.py  rk2_method.py  rk4_method.py  trapezoid_method.py
pydiffeq/: __init__.py  ode_library.py  ode_solver.py  ode_system.py
pydiffeq/methods/: __init__.py  euler_method.py  explicit_euler_method.py  explicit_rk2_method.py  explicit_rk4_method.py  explicit_second_adams.py  implicit_euler_method.py  implicit_rk2_method.py  implicit_rk4_method.py  km_method.py  middle_poind_method.py  rk2_method.py  rk4_method.py  rkf_method.py  semi_implicit_euler.py  semi_implicit_rk2.py  semi_implicit_rk4.py  trapezoid_method.py
pydiffeq/utils/: dichotomy_method.py
