[build-system]
requires = ["numpy >= 1.24.0", "setuptools>=40.8.0"]
build-backend = "setuptools.build_meta:__legacy__"
[project]
name = "PyDiffeqq"
version = "0.0.4"
authors = [
  { name="Ilya Kostomarov", email="kostomarov.2001@mail.ru" },
]
description = "Library for solving ode systems"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/SirC00kie/PyDiffeq"
"Bug Tracker" = "https://github.com/SirC00kie/PyDiffeq/issues"